Draw squares vertically and horizontally

--- a/canvasGame.html
+++ b/canvasGame.html
@@ -13,7 +13,7 @@
         <h1>Canvas Game</h1>
     </header>
     <main>
-        <canvas width="400" height="400" style="border-style:solid"></canvas>
+        <canvas id="canvas" width="400" height="400" style="border-style:solid"></canvas>
     </main>
     <script src="canvasGame.js"></script>
 </body>
