--- a/canvasGame.html
+++ b/canvasGame.html
@@ -13,6 +13,16 @@
         <h1>Canvas Game</h1>
     </header>
     <main>
+        <div id="initial-screen">
+            <h2>Rules</h2>
+            <p>
+                2 Players: Three Moves Per Turn
+                <br>
+                Cover Your Opponents Current Position
+                <br>
+                First Player to Three Wins
+            </p>
+        </div>
         <canvas id="canvas" width="400" height="400" style="border-style:solid"></canvas>
     </main>
     <script src="canvasGame.js"></script>
