--- a/canvasGame.html
+++ b/canvasGame.html
@@ -23,6 +23,19 @@
                 First Player to Three Wins
             </p>
         </div>
+
+        <div id="turn-generator">
+            <h2>Closest Number between 1-10 Goes First</h2>
+            <label for="p1-choice">Player One</label><br>
+            <input type="text" id="p1-choice"><br>
+
+            <br>
+
+            <label for="p2-choice">Player Two</label><br>
+            <input type="text" id="p2-choice">
+
+            <p id="turn-generator-output"></p>
+        </div>
         <canvas id="canvas" width="400" height="400" style="border-style:solid"></canvas>
     </main>
     <script src="canvasGame.js"></script>
