--- a/canvasGame.html
+++ b/canvasGame.html
@@ -34,6 +34,11 @@
             <label for="p2-choice">Player Two</label><br>
             <input type="text" id="p2-choice">
 
+            <br>
+            <br>
+
+            <button id="turn-generator-button">Who Goes First?</button>
+
             <p id="turn-generator-output"></p>
         </div>
         <canvas id="canvas" width="400" height="400" style="border-style:solid"></canvas>
