--- a/canvasGame.html
+++ b/canvasGame.html
@@ -40,6 +40,8 @@
             <button id="turn-generator-button">Who Goes First?</button>
 
             <p id="turn-generator-output"></p>
+
+            <button id="start-game-button">Play Game</button>
         </div>
         <canvas id="canvas" width="400" height="400" style="border-style:solid"></canvas>
     </main>
