--- a/canvasGame.html
+++ b/canvasGame.html
@@ -25,7 +25,7 @@
         </div>
 
         <div id="turn-generator">
-            <h2>Closest Number between 1-10 Goes First</h2>
+            <h2>Closest Number Between 1-10 Goes First</h2>
             <label for="p1-choice">Player One</label><br>
             <input type="text" id="p1-choice"><br>
 
