Controls text for game

--- a/canvasGame.html
+++ b/canvasGame.html
@@ -43,7 +43,17 @@
 
             <button id="start-game-button">Play Game</button>
         </div>
+
+        <!--Game-->
         <canvas id="canvas" width="400" height="400" style="border-style:solid"></canvas>
+        <div id="game-controls">
+            <h2>Controls</h2>
+            <p>
+                Player 1: Arrow Keys
+                <br>
+                Player 2: WASD
+            </p>
+        </div>
     </main>
     <script src="canvasGame.js"></script>
 </body>
