Bold Player text to seperate from actual controls

--- a/canvasGame.html
+++ b/canvasGame.html
@@ -49,9 +49,9 @@
         <div id="game-controls">
             <h2>Controls</h2>
             <p>
-                Player 1: Arrow Keys
+                <span style="font-weight: bold">Player 1:</span> Arrow Keys
                 <br>
-                Player 2: WASD
+                <span style="font-weight: bold">Player 2:</span> WASD
             </p>
         </div>
     </main>
